cloned, created branch, added viewport meta tag, and imported all components in index.less

--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,15 @@
 // Follow the order in the readme
+
+@import 'variables';
+@import 'mixins';
+
+// reset and general file
+
+@import 'reset';
+@import 'global';
+
+//components
+
+@import 'navigation';
+@import 'footer';
+@import 'home-page';
