--- a/less/home-page.less
+++ b/less/home-page.less
@@ -25,7 +25,7 @@
 
   .inverse-content {
     padding-bottom: 30px;
-    border-bottom: 2px dashed @navigation-border;
+    .border-btm();
 
     .text-content {
       padding-left: 1%;
@@ -59,3 +59,14 @@
     }
   }
 }// home
+
+//my code starts here
+
+header{
+  .btmpad();
+  .border-btm();
+  
+  img{
+    .btmpad();
+  }
+}
