--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,12 @@
 // Mixins in here
+.border-btm(){
+    border-bottom: 2px dashed @navigation-border;
+}
+
+.toppad(@padsize: 10px;){
+    padding-top: @padsize;
+}
+
+.btmpad(@padsize: 10px;){
+    padding-bottom: @padsize;
+}
