--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,22 @@
 // Navigation Styles here
+nav{
+    width: 880px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    .border-btm();
+    padding: 20px 40px 20px 40px;
+
+    .btm-nav{
+        a {
+            font-size: 1.6rem;
+            color: @font-color;
+            text-decoration: none;
+            padding: 10px;
+
+            &:visited{
+                text-decoration: none;
+            }// closes visited 
+        }// closes a
+    }//closes btm-nav
+}//closes nav
