--- a/less/global.less
+++ b/less/global.less
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+h1,h2,h3,h4,h5,p,div,section,header,nav,img {
+  border: 1px solid gray;
+}
+
+
 html {
   font-size: 62.5%;
 }
@@ -25,13 +30,13 @@ h2 {
 
 h4 {
   font-size: 2.5rem;
-  padding-bottom: 10px;
+  .btmpad()
 }
 
 p {
   line-height: 1.5;
   font-size: 1.6rem;
-  padding-bottom: 10px;
+  .btmpad()
 }
 
 img {
@@ -44,3 +49,4 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+
