--- a/css/index.css
+++ b/css/index.css
@@ -189,6 +189,18 @@ nav {
   border-bottom: 2px dashed #C0C0C0;
   padding: 20px 40px 20px 40px;
 }
+@media (max-width: 500px) {
+  nav {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+}
+nav .btm-nav {
+  padding: 10px;
+}
 nav .btm-nav a {
   font-size: 1.6rem;
   color: #212529;
@@ -215,9 +227,21 @@ nav .btm-nav a:visited {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
 }
 .home .content-section .img-content {
   width: 48%;
@@ -226,9 +250,21 @@ nav .btm-nav a:visited {
 .home .content-section .img-content img {
   border-radius: 10px;
 }
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    margin: 0 auto;
+    width: 100%;
+  }
+}
 .home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content {
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -245,15 +281,33 @@ nav .btm-nav a:visited {
 .home .content-destination img {
   border-radius: 10px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-pick {
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 70%;
+    margin: 5% auto;
+  }
 }
 header {
   padding-bottom: 10px;
@@ -261,4 +315,46 @@ header {
 }
 header img {
   padding-bottom: 10px;
+}
+.island-sign-up {
+  display: block;
+  width: 100%;
+  border-radius: 10px;
+  margin: 0 auto;
+  background-color: #17A2B8;
+  color: #FFFFFF;
+  font-size: 1.6rem;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.island-sign-up:hover {
+  background-color: #148ea1;
+}
+.mtn-sign-up {
+  display: block;
+  width: 100%;
+  border-radius: 10px;
+  margin: 0 auto;
+  background-color: #17A2B8;
+  color: #FFFFFF;
+  font-size: 1.6rem;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.mtn-sign-up:hover {
+  background-color: #148ea1;
+}
+.exp-sign-up {
+  display: block;
+  width: 100%;
+  border-radius: 10px;
+  margin: 0 auto;
+  background-color: #17A2B8;
+  color: #FFFFFF;
+  font-size: 1.6rem;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.exp-sign-up:hover {
+  background-color: #148ea1;
 }
