--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,12 +6,21 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
+    @media @mobile{
+      .flex-swith(column);
+    }
+
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+      
+      @media @mobile{
+        width: 100%;
+      }
+
     }
+
 
     .img-content {
       width: 48%;
@@ -20,6 +29,12 @@
       img {
         border-radius: 10px;
       }
+
+      @media @mobile{
+        margin: 0 auto;
+        width: 100%;
+      
+      }
     }
   }
 
@@ -27,15 +42,31 @@
     padding-bottom: 30px;
     .border-btm();
 
+    @media @mobile{
+      .flex-switch(column-reverse);
+    }
+
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+
+      @media @mobile{
+        .nopad();
+      }
+      
     }
+    
 
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+
+      @media @mobile{
+        .nopad();
+      }
+
     }
+
   }
 
   .content-destination {
@@ -45,6 +76,11 @@
     img {
       border-radius: 10px;
     }
+
+    @media @mobile{
+      width: 100%;
+    }
+
   }
 
   .content-pick {
@@ -53,10 +89,20 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile{
+      .flex-switch(column);
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media @mobile{
+        width: 70%;
+        margin: 5% auto;
+      }
     }
+
   }
 }// home
 
@@ -69,4 +115,16 @@ header{
   img{
     .btmpad();
   }
+}
+
+.island-sign-up {
+  .custm-btn();
+}
+
+.mtn-sign-up {
+  .custm-btn();
+}
+
+.exp-sign-up {
+  .custm-btn();
 }
