--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,15 +3,15 @@
     border-bottom: 2px dashed @navigation-border;
 }
 
-.toppad(@padsize: 10px;){
+.toppad(@padsize: 10px){
     padding-top: @padsize;
 }
 
-.btmpad(@padsize: 10px;){
+.btmpad(@padsize: 10px){
     padding-bottom: @padsize;
 }
 
-.flex-swith(@row-or-col){
+.flex-switch(@row-or-col){
     display: flex;
     flex-direction: @row-or-col;
     justify-content: center;
