--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,9 +8,10 @@ nav{
     padding: 20px 40px 20px 40px;
 
     @media @mobile{
+        .flex-switch(column);
         max-width: 100%;
-        .row-to-col();
         text-align: center;
+        .btmpad(1px);
     }
 
     .btm-nav{
