--- a/css/index.css
+++ b/css/index.css
@@ -129,25 +129,18 @@ table {
 * {
   box-sizing: border-box;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-p,
-div,
-section,
-header,
-nav,
-img {
-  border: 1px solid gray;
-}
 html {
   font-size: 62.5%;
 }
 html,
 body {
   font-family: 'Roboto', sans-serif;
+}
+@media (max-width: 500px) {
+  body {
+    width: 90%;
+    margin: 0 auto;
+  }
 }
 h1,
 h2,
@@ -191,11 +184,12 @@ nav {
 }
 @media (max-width: 500px) {
   nav {
-    max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 100%;
     text-align: center;
+    padding-bottom: 1px;
   }
 }
 nav .btm-nav {
@@ -221,6 +215,12 @@ nav .btm-nav a:visited {
   font-size: 1.6rem;
   padding: 20px;
 }
+@media (max-width: 500px) {
+  .home {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
@@ -232,6 +232,8 @@ nav .btm-nav a:visited {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-bottom: 30px;
+    border-bottom: 2px dashed #C0C0C0;
   }
 }
 .home .content-section .text-content {
@@ -247,14 +249,14 @@ nav .btm-nav a:visited {
   width: 48%;
   padding-left: 1%;
 }
-.home .content-section .img-content img {
-  border-radius: 10px;
-}
 @media (max-width: 500px) {
   .home .content-section .img-content {
-    margin: 0 auto;
     width: 100%;
+    padding: 0;
   }
+}
+.home .content-section .img-content img {
+  border-radius: 10px;
 }
 .home .inverse-content {
   padding-bottom: 30px;
@@ -264,6 +266,7 @@ nav .btm-nav a:visited {
   .home .inverse-content {
     display: flex;
     flex-direction: column-reverse;
+    justify-content: center;
   }
 }
 .home .inverse-content .text-content {
@@ -278,13 +281,13 @@ nav .btm-nav a:visited {
   width: 75%;
   margin: 0 auto 30px;
 }
-.home .content-destination img {
-  border-radius: 10px;
-}
 @media (max-width: 500px) {
   .home .content-destination {
     width: 100%;
   }
+}
+.home .content-destination img {
+  border-radius: 10px;
 }
 .home .content-pick {
   padding-top: 30px;
@@ -305,8 +308,11 @@ nav .btm-nav a:visited {
 }
 @media (max-width: 500px) {
   .home .content-pick .destination {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 70%;
-    margin: 5% auto;
+    margin: 4% auto;
   }
 }
 header {
