--- a/less/global.less
+++ b/less/global.less
@@ -2,17 +2,19 @@
   box-sizing: border-box;
 }
 
-h1,h2,h3,h4,h5,p,div,section,header,nav,img {
-  border: 1px solid gray;
-}
-
-
 html {
   font-size: 62.5%;
 }
 
 html, body {
   font-family: 'Roboto', sans-serif;
+}
+
+body{
+  @media @mobile{
+    width: 90%;
+    margin: 0 auto;
+  }
 }
 
 h1, h2, h3, h4, h5 {
