--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,10 @@
 .home {
 
+  @media @mobile{
+    width: 90%;
+    margin: 0 auto;
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -7,36 +12,38 @@
     justify-content: space-between;
 
     @media @mobile{
-      .flex-swith(column);
-    }
+      .flex-switch(column);
+      .btmpad(30px);
+      .border-btm();
+    } //close media content-section
 
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
-      
+
       @media @mobile{
         width: 100%;
       }
 
-    }
+    } // closes text-content
 
 
     .img-content {
       width: 48%;
       padding-left: 1%;
 
-      img {
-        border-radius: 10px;
+      @media @mobile{
+        width: 100%;
+        padding: 0;
       }
 
-      @media @mobile{
-        margin: 0 auto;
-        width: 100%;
-      
-      }
-    }
-  }
+      img {
+        border-radius: 10px
+      }//closes img
+
+    }//closes img-content
+
+  }//closes content-section
 
   .inverse-content {
     padding-bottom: 30px;
@@ -46,42 +53,35 @@
       .flex-switch(column-reverse);
     }
 
+
     .text-content {
       padding-left: 1%;
       padding-right: 0;
 
-      @media @mobile{
-        .nopad();
-      }
-      
-    }
+    }//closs text-content
     
-
     .img-content {
       padding-right: 1%;
       padding-left: 0;
 
-      @media @mobile{
-        .nopad();
-      }
 
-    }
+    }//closes img-content
 
-  }
+  }//closes inverse-content
 
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
 
-    img {
-      border-radius: 10px;
-    }
-
     @media @mobile{
       width: 100%;
     }
 
-  }
+    img {
+      border-radius: 10px;
+    }// closes img
+
+  }//closes content-destination
 
   .content-pick {
     padding-top: 30px;
@@ -98,12 +98,13 @@
       margin-bottom: 30px;
 
       @media @mobile{
+        .flex-switch(column);
         width: 70%;
-        margin: 5% auto;
+        margin: 4% auto;
       }
-    }
+    }//closes destination
 
-  }
+  }//closes content-pick
 }// home
 
 //my code starts here
@@ -115,7 +116,7 @@ header{
   img{
     .btmpad();
   }
-}
+}//closes header
 
 .island-sign-up {
   .custm-btn();
