--- a/css/index.css
+++ b/css/index.css
@@ -364,3 +364,29 @@ header img {
 .exp-sign-up:hover {
   background-color: #148ea1;
 }
+.theform {
+  width: 70%;
+  margin: 0 auto;
+  padding-bottom: 30px;
+}
+input[type=text] {
+  width: 100%;
+  padding: 2%;
+  margin: 0 auto;
+  display: block;
+}
+textarea {
+  width: 100%;
+  height: 150px;
+  margin-bottom: 20px;
+  resize: none;
+}
+input[type=submit] {
+  width: 100%;
+  background-color: #17A2B8;
+  color: #FFFFFF;
+  font-size: 1.9rem;
+  padding: 2%;
+  border: none;
+  border-radius: 4px;
+}
